

==============================
Release 5.*
==============================
2014-06-02    Add KeyboardWatcher to observe keyboard events (keyboard hooks) even the app has not the focus
2014-05-25    Add CancelTryAgainContinue to WPFMessageBox
2014-05-25    Add optional help button to the WPFMessageBox
2014-05-25    Change messagebox text from TextBlock to Label to have it catchable by coded UI
2014-05-25    Add missing automation ID for the messagebox text and icon
2014-05-25    Load message box strings from the system and add possibility to define new from outside
2014-05-24    Add changeable copy formatter to the WPFMessageBox
2014-05-24    Add possibility to add and change the system menu and icon in the WPFMessageBox
2014-05-24    Add custom text block control to the WPFMessageBox to show the message
2014-05-24    Disable system menu in WPFMessageBox
2014-05-24    Add possibility to disable the close button or system menu in the WindowTitleBarBehavior
2014-05-24    Add WPFMessageBox with first functionalities
2014-05-19    Add DockingPane
2014-05-09    Add possibility to check and uncheck a NumberBox
2014-05-09    Add possibility to have a reset button in the NumberBox
2014-05-09    Merge NumericUpDown into the NumberBox
2014-05-08    Add NullToVisibilityConverter
2014-05-08    Add NullToBooleanConverter
2014-05-08    Make the InverseBooleanConverter sealed
2014-05-05    Take care about the Horizontal|VerticalContentAlignment in the EnhancedTextBox


==============================
Release 5.0.0.0
==============================
2014-04-06    Add automation IDs
2014-04-04    Adjust XmlnsDefinitions
2014-03-23    Add documentations
2014-03-23    Add PagingControl
2014-03-22    Adjust documentation to not to show warnings for missing documentations
2014-03-20    Add some missing objects
2014-03-17    Take over all objects from 4.0.0.0
==============================